--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,13 @@
     <nav class="navbar navbar-default container-inner">
         <div class="navbar-left">
             <ul class="nav navbar-nav">
-                <li class="index-li active"><a href="index.html">Home</a></li>
+                <li class="index-li1"><a href="index.html">Home</a></li>
                 <li class="aboutus-li"><a href="#">About Us</a></li>
                 <li class="ec-li"><a href="#">Events</a></li>
-                <li class="contact-li"><a href="#">Projects</a></li>
-                <li class="contact-li"><a href="#">Members</a></li>
-                <li class="contact-li"><a href="#">Work Group</a></li>
-                <li class="contact-li"><a href="#">Services</a></li>
+                <li class="projects-li"><a href="#">Projects</a></li>
+                <li class="members-li"><a href="#">Members</a></li>
+                <li class="group-li"><a href="#">Work Group</a></li>
+                <li class="services-li"><a href="#">Services</a></li>
                 <li class="contact-li"><a href="#">Contact Us</a></li>
             </ul>
         </div>
@@ -154,7 +154,7 @@
 <div class="container third-container">
     <div class="container-inner">
         <div class="content row ">
-            <div class="col col-sm-8 left">
+            <div class="col col-sm-9 left">
                 <p class="title h5">Contact Form</p>
                 <form>
                     <input type="text" placeholder="First Name">
@@ -165,10 +165,8 @@
                     <button class="btn btn-default submit" onclick="return false;">SUBMIT</button>
                 </form>
             </div>
-            <div class="col col-sm-4 right">
-                <div class="container-inner">
-                    <img src="assets/images/index/third/QRcode.jpg">
-                </div>
+            <div class="col col-sm-3 right">
+                <img src="assets/images/index/third/QRcode.jpg">
             </div>
         </div>
     </div>
