--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,12 @@
     <nav class="navbar navbar-default container-inner">
         <div class="navbar-left">
             <ul class="nav navbar-nav">
-                <li class="index-li1"><a href="index.html">Home</a></li>
-                <li class="aboutus-li"><a href="#">About Us</a></li>
+                <li class="index-li active"><a href="index.html">Home</a></li>
+                <li class="aboutus-li"><a href="about.html">About Us</a></li>
                 <li class="ec-li"><a href="#">Events</a></li>
                 <li class="projects-li"><a href="#">Projects</a></li>
                 <li class="members-li"><a href="#">Members</a></li>
                 <li class="group-li"><a href="#">Work Group</a></li>
-                <li class="services-li"><a href="#">Services</a></li>
                 <li class="contact-li"><a href="#">Contact Us</a></li>
             </ul>
         </div>
