--- a/public/about.html
+++ b/public/about.html
@@ -12,7 +12,7 @@
 <body id="about">
 <div class="container top-container">
     <div class="top-logo container-inner">
-        <img src="assets/images/common/top-logo.png">
+        <img class="top-logo-img" src="assets/images/common/top-logo.png">
         <a href="#" class="btn">CN</a>
         <a href="#" class="btn">EN</a>
         <a href="#" class="btn newsletter"><span class="glyphicon glyphicon-envelope"></span>NEWS LETTER</a>
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-default container-inner">
         <div class="navbar-left">
             <ul class="nav navbar-nav">
-                <li class="index-li"><a href="index.html">Home</a></li>
+                <li class="index-li active"><a href="index.html">Home</a></li>
                 <li class="about-li"><a href="about.html">About Us</a></li>
                 <li class="ec-li"><a href="#">Events</a></li>
                 <li class="projects-li"><a href="#">Projects</a></li>
