--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <body id="index">
 <div class="container top-container">
     <div class="top-logo container-inner">
-        <img src="assets/images/common/top-logo.png">
+        <img class="top-logo-img" src="assets/images/common/top-logo.png">
         <a href="#" class="btn">CN</a>
         <a href="#" class="btn">EN</a>
         <a href="#" class="btn newsletter"><span class="glyphicon glyphicon-envelope"></span>NEWS LETTER</a>
@@ -23,7 +23,7 @@
         <div class="navbar-left">
             <ul class="nav navbar-nav">
                 <li class="index-li active"><a href="index.html">Home</a></li>
-                <li class="aboutus-li"><a href="about.html">About Us</a></li>
+                <li class="about-li"><a href="about.html">About Us</a></li>
                 <li class="ec-li"><a href="#">Events</a></li>
                 <li class="projects-li"><a href="#">Projects</a></li>
                 <li class="members-li"><a href="#">Members</a></li>
@@ -37,8 +37,8 @@
     <div class="flexslider container-inner">
         <ul class="slides">
             <li class="item row">
-                <img class="col col-sm-7" src="assets/images/index/first/slider1.jpg">
-                <div class="flex-caption col col-sm-5">
+                <img class="col col-md-7" src="assets/images/index/first/slider1.jpg">
+                <div class="flex-caption col col-md-5">
                     <h3>HD CEFC</h3>
                     <p>Huan De China EU Future City(HD CEFC) Project is the pilot project under China-EU Urbanization
                         Partnership. EUTECC is facilitating the international business promotion of CEFC Project and
@@ -55,8 +55,8 @@
                 </div>
             </li>
             <li class="item row">
-                <img class="col col-sm-7" src="assets/images/index/first/slider2.jpg">
-                <div class="flex-caption col col-sm-5">
+                <img class="col col-md-7" src="assets/images/index/first/slider2.jpg">
+                <div class="flex-caption col col-md-5">
                     <h3>China Technology Center in Munich(under planning)</h3>
                     <p>EUTECC is facilitating the Chinese high-tech companies and EU companies to have successful
                         cooperation in Germany
@@ -80,10 +80,10 @@
     </div>
     <div class="container-inner">
         <div class="content row ">
-            <div class="col col-sm-6">
+            <div class="col col-md-6">
                 <img src="assets/images/index/second/event1.jpg">
             </div>
-            <div class="col col-sm-6 right-content">
+            <div class="col col-md-6 right-content">
                 <p class="title h4">Intelligent Production in Guangdong vs Industry 4.0 in Germany</p>
                 <p>On Apr 8th 2016, the Intelligent Production in Guangdong vs Industry 4.0 in Germany was held by
                     Shenzhen Longgang District People’s Government in Munich. On the conference, a “Strategic
@@ -94,10 +94,10 @@
             </div>
         </div>
         <div class="content row ">
-            <div class="col col-sm-6">
+            <div class="col col-md-6">
                 <img src="assets/images/index/second/event2.jpg">
             </div>
-            <div class="col col-sm-6 right-content">
+            <div class="col col-md-6 right-content">
                 <p class="title h4">China-Germany Symposium on Economic and Trade Cooperation</p>
                 <p>On Sep 12th 2016, China-Germany Symposium on Economic and Trade Cooperation was held in Munich,
                     coorganized by Shenzhen Municipal People‘s Government and the State Government of Bavaria Germany.
@@ -108,10 +108,10 @@
             </div>
         </div>
         <div class="content row ">
-            <div class="col col-sm-6">
+            <div class="col col-md-6">
                 <img src="assets/images/index/second/event3.jpg">
             </div>
-            <div class="col col-sm-6 right-content">
+            <div class="col col-md-6 right-content">
                 <p class="title h4">2017 HD CEFC Promotion Event-Munich</p>
                 <p>On Mar 24th, supported and co-organized by EUTECC, Huande China EU Future City Promotion event was
                     held in Bayerischer Hof Hotel in Munich Bavaria. Mr Scharping, Former Minister of Defense in Germany
@@ -121,10 +121,10 @@
             </div>
         </div>
         <div class="content row ">
-            <div class="col col-sm-6">
+            <div class="col col-md-6">
                 <img src="assets/images/index/second/event4.jpg">
             </div>
-            <div class="col col-sm-6 right-content">
+            <div class="col col-md-6 right-content">
                 <p class="title h4">2017 HD CEFC Promotion Event-Nuremberg</p>
                 <p>On May 16th 2017, HD CEFC Promotion Event was held in Tucher Castle in Nuremberg. Dr Fraas, the Vice
                     Mayor of Nuremberg, and Dr Wagner, Head of International Business of HVB, addressed the event. More
@@ -135,10 +135,10 @@
             </div>
         </div>
         <div class="content row ">
-            <div class="col col-sm-6">
+            <div class="col col-md-6">
                 <img src="assets/images/index/second/event5.jpg">
             </div>
-            <div class="col col-sm-6 right-content">
+            <div class="col col-md-6 right-content">
                 <p class="title h4">2017 HD CEFC Promotion Event-Zurich</p>
                 <p>On July 6th 2017, the HD CEFC promotion event was successfully held in Zurich, the biggest city in
                     Switzerland. Mr. Wybren Tearpestra from GIC, one of the largest specialized steel manufacturers and
@@ -153,7 +153,7 @@
 <div class="container third-container">
     <div class="container-inner">
         <div class="content row ">
-            <div class="col col-sm-9 left">
+            <div class="col col-md-9 left">
                 <p class="title h5">Contact Form</p>
                 <form>
                     <input type="text" placeholder="First Name">
@@ -164,7 +164,7 @@
                     <button class="btn btn-default submit" onclick="return false;">SUBMIT</button>
                 </form>
             </div>
-            <div class="col col-sm-3 right">
+            <div class="col col-md-3 right">
                 <img src="assets/images/index/third/QRcode.jpg">
             </div>
         </div>
