--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,11 @@
             <ul class="nav navbar-nav">
                 <li class="index-li active"><a href="index.html">Home</a></li>
                 <li class="about-li"><a href="about.html">About Us</a></li>
-                <li class="ec-li"><a href="#">Events</a></li>
-                <li class="projects-li"><a href="#">Projects</a></li>
-                <li class="members-li"><a href="#">Members</a></li>
-                <li class="group-li"><a href="#">Work Group</a></li>
-                <li class="contact-li"><a href="#">Contact Us</a></li>
+                <li class="ec-li"><a href="events.html">Events</a></li>
+                <li class="projects-li"><a href="projects.html">Projects</a></li>
+                <li class="members-li"><a href="members.html">Members</a></li>
+                <li class="group-li"><a href="group.html">Work Group</a></li>
+                <li class="contact-li"><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
     </nav>
@@ -175,5 +175,10 @@
     <p>版权所有：环德未来置业（深圳）有限公司</p>
     <p>粤ICP备17073053号-1</p>
 </div>
+<span id="top-link-block" class="hidden">
+    <a href="#top" class="well well-sm">
+        <i class="glyphicon glyphicon-chevron-up"></i>
+    </a>
+</span>
 </body>
 </html>
