--- a/public/20170516.html
+++ b/public/20170516.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="js/basic.browserify.js"></script>
     <script type="text/javascript" src="js/dev/holder.min.js"></script>
 </head>
-<body id="contact">
+<body id="ec">
 <div class="container top-container">
     <div class="top-logo container-inner">
         <img class="top-logo-img" src="assets/images/common/top-logo.png">
@@ -35,23 +35,32 @@
 </div>
 <div class="container first-container">
     <div class="container-inner bg">
-        <img src="assets/images/contact/first-bg.jpg">
+        <div class="right-top">
+            <div>
+                <ul>
+                    <li>Provide great opportunity for European companies to enter Chinese market</li>
+                    <li>Introduce high growth, high tech and value added European enterprises</li>
+                    <li>Strengthen the co-operation and relationship between Europe and China</li>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
-<div class="container second-container">
+<div class="container second-container single-event">
     <div class="title">
         <span class="triangle-bottomright"></span>
-        <span class="h3">GERMAN OFFICE</span>
+        <span class="h3">EVENTS SUPPORTED BY EUTECC</span>
     </div>
-    <div class="container-inner bg">
-        <div class="right-bottom">
-            <img src="assets/images/index/third/QRcode.jpg">
-            <p>Tel : +49 - 89 - 4522 430 - 0</p>
-            <p>Fax : +49 - 89 - 4522 430 - 21</p>
-            <p>Website : www.eutecc.org</p>
-            <p>Email : info@eutecc.org</p>
-            <p>Address : European Technology Chamber (EUTECC), Prannerstrasse 6, 80333 München</p>
-        </div>
+    <div class="container-inner">
+        <h3>HD CEFC Promotion Event in Nuremberg</h3>
+        <p>On 16th May 2017, a successful HD CEFC promotion event was held in Nuremberg, Germany. The event was in the
+            historic rooms of the Tucher Castle and was fully booked with 70 companies which are all EU technology
+            leaders!</p>
+        <p>The guest speakers included Mr. Dr. Fraas, the Vice Mayor of Nuremberg as well the international head of HVB,
+            one of Germany leading banks. During the event Dr. V.Tucher, Mr. Conrad and Mr. Florian Schmied, who is the
+            chairman of Tucher Group, introduced the HD CEFC project and the Chinese market opportunities to the
+            guests.</p>
+        <img src="assets/images/events/20170516/1.jpg">
     </div>
 </div>
 <div class="container footer">
