--- a/public/events.html
+++ b/public/events.html
@@ -26,8 +26,8 @@
                 <li class="about-li"><a href="about.html">About Us</a></li>
                 <li class="ec-li"><a href="events.html">Events</a></li>
                 <li class="projects-li"><a href="projects.html">Projects</a></li>
-                <li class="members-li"><a href="members.html">Members</a></li>
-                <li class="group-li"><a href="group.html">Work Group</a></li>
+                <li class="members-li"><a href="members.html">Technology Partners</a></li>
+                <li class="group-li"><a href="group.html">Working Groups</a></li>
                 <li class="contact-li"><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
@@ -37,11 +37,10 @@
     <div class="container-inner bg">
         <div class="right-top">
             <div>
-                <h3>The major mission of EUTECC</h3>
                 <ul>
-                    <li>Help European Companies enter the Chinese market</li>
-                    <li>Promote the Belt and Road Initiatives</li>
-                    <li>Help to promote 2025</li>
+                    <li>Provide great opportunity for European companies to enter Chinese market</li>
+                    <li>Introduce high growth, high tech and value added European enterprises</li>
+                    <li>Strengthen the co-operation and relationship between Europe and China</li>
                 </ul>
             </div>
         </div>
@@ -54,101 +53,132 @@
     </div>
     <div class="container-inner">
         <ul class="content row">
-            <li class="col col-md-4">
-                <img src="assets/images/events/second-1.jpg">
-            </li>
-            <li class="col col-md-8">
-                <h3>Intelligent Production in Guangdong vs Industry 4.0 in Germany</h3>
-                <hr>
-                <p>
-                    On Apr 8th 2016, the Intelligent Production in Guangdong vs Industry 4.0 in
-                    Germany was held by Shenzhen Longgang District People’s Government in Munich.
-                    On the conference, a “Strategic Cooperation Framework on the Pilot Project of China
-                    EU Future City” was signed in between the following 5 parties: Shenzhen Longgang
-                    District People’s Government, Tucher Group, EUTECC, TUM Int’l GmbH, and Medical
-                    Valley EMN.
-                </p>
-            </li>
-        </ul>
-        <ul class="content row">
-            <li class="col col-md-4">
-                <img src="assets/images/events/second-2.jpg">
-            </li>
-            <li class="col col-md-8">
-                <h3>China-Germany Symposium on Economic and Trade Cooperation</h3>
-                <hr>
-                <p>
-                    On Sep 12th 2016, China-Germany Symposium on Economic and Trade Cooperation
-                    was held in Munich, coorganized by Shenzhen Municipal People‘s Government and
-                    the State Government of Bavaria Germany. Many European companies entered into
-                    cooperative agreement with us on our projects in China. Mr Florian Schmied,
-                    Chairman of Tucher Group and EUTECC, gave a report on the Economic Development
-                    in Shenzhen, Cooperation with Germany and Industry 4.0 in China and Germany.
-                </p>
-            </li>
-        </ul>
-        <ul class="content row">
-            <li class="col col-md-4">
-                <img src="assets/images/events/second-3.jpg">
-            </li>
-            <li class="col col-md-8">
-                <h3>1st China EU Future City Medical Cluster Conference-Senior Care
-                    Facility Launch Ceremony</h3>
-                <hr>
-                <p>
-                    China EU Future City, supported by EUTECC, successfully brought in the largest
-                    senior care group in Germany, and the Senior Care Facility Launch Ceremony was
-                    held in Shenzhen Longgang District On Nov  21st 2016.  Dr. Florian Janik , Mayor
-                    of Erlangen in Germany,  witnessed the ceremony.
-                </p>
-            </li>
-        </ul>
-        <ul class="content row">
-            <li class="col col-md-4">
-                <img src="assets/images/events/second-4.jpg">
-            </li>
-            <li class="col col-md-8">
-                <h3>2017 HD CEFC Promotion Event-Munich</h3>
-                <hr>
-                <p>
-                    On Mar 24th, supported and co-organized by EUTECC, Huande China EU Future
-                    City Promotion event was held in Bayerischer Hof Hotel in Munich Bavaria.
-                    Mr Scharping, Former Minister of Defense in Germany and European Socialist
-                    Parties, and Dr Wagner, Head of International Business of HVB, attended the event.
-                    Over 50 European companies took part in it.
-                </p>
-            </li>
-        </ul>
-        <ul class="content row bottom">
             <li class="col col-md-6">
                 <div>
-                    <img src="assets/images/events/second-5.jpg">
-                    <h3>2017 HD CEFC Promotion Event-Nuremberg</h3>
-                    <hr>
-                    <p>
-                        On May 16th 2017, HD CEFC Promotion Event was held in
-                        Tucher Castle in Nuremberg. Dr Fraas, the Vice Mayor of
-                        Nuremberg,  and Dr Wagner, Head of International Business
-                        of HVB, addressed the event. More than 50 European compa-
-                        nies participated in the event, many of which signed cooper-
-                        ation agreement with us on the spot.
-                    </p>
+                    <img src="assets/images/events/20171124.jpg">
+                    <div class="data">
+                        <h3>DELEGATION OF QINGDAO VISITED TUCHER CASTLE</h3>
+                        <h4>24th Nov, 2017</h4>
+                    </div>
+                    <a class="h5">More >></a>
                 </div>
             </li>
             <li class="col col-md-6">
                 <div>
-                    <img src="assets/images/events/second-6.jpg">
-                    <h3>2017 HD CEFC Promotion Event-Zurich</h3>
-                    <hr>
-                    <p>
-                        On July 6th 2017, the HD CEFC promotion event was success-
-                        fully held in Zurich, the biggest city in Switzerland. Mr. Wybren
-                        Tearpestra from GIC, one of the largest specialized steel man-
-                        ufacturers and ship builders in the world, Mr. Yusuf Savmaz,
-                        Head of Zurich Region, Credit Suisse AG, and more than 50
-                        leading high-tech companies from Europe actively participa-
-                        ted in the event.
-                    </p>
+                    <img src="assets/images/events/20171121.jpg">
+                    <div class="data">
+                        <h3>EUTECC JOINED EUROPE INVESTMENT CONFERENCE</h3>
+                        <h4>21th Nov, 2017</h4>
+                    </div>
+                    <a class="h5">More >></a>
+                </div>
+            </li>
+            <li class="col col-md-6">
+                <div>
+                    <img src="assets/images/events/20170920.jpg">
+                    <div class="data">
+                        <h3>FORMER MINISTER PRESIDENT JOINED HD CEFC EVENT</h3>
+                        <h4>20th Sep, 2017</h4>
+                    </div>
+                    <a class="h5">More >></a>
+                </div>
+            </li>
+            <li class="col col-md-6">
+                <div>
+                    <img src="assets/images/events/20170914.jpg">
+                    <div class="data">
+                        <h3>EUTECC JOINED EUROPE INVESTMENT CONFERENCE</h3>
+                        <h4>14th Sep, 2017</h4>
+                    </div>
+                    <a class="h5">More >></a>
+                </div>
+            </li>
+            <li class="col col-md-6">
+                <div>
+                    <img src="assets/images/events/20170907.jpg">
+                    <div class="data">
+                        <h3>FIFTH INTERNATIONAL LOW CARBON FORUM</h3>
+                        <h4>7th Sep, 2017</h4>
+                    </div>
+                    <a class="h5">More >></a>
+                </div>
+            </li>
+            <li class="col col-md-6">
+                <div>
+                    <img src="assets/images/events/20170906.jpg">
+                    <div class="data">
+                        <h3>ITALIAN DAY EVENT</h3>
+                        <h4>6th Sep, 2017</h4>
+                    </div>
+                    <a class="h5">More >></a>
+                </div>
+            </li>
+            <li class="col col-md-6">
+                <div>
+                    <img src="assets/images/events/20170905.jpg">
+                    <div class="data">
+                        <h3>HD CEFC PROJECT SYMPOSIUM</h3>
+                        <h4>5th Sep, 2017</h4>
+                    </div>
+                    <a class="h5">More >></a>
+                </div>
+            </li>
+            <li class="col col-md-6">
+                <div>
+                    <img src="assets/images/events/20170813.jpg">
+                    <div class="data">
+                        <h3>SHENZHEN MEETS NUREMBERG IN TUCHER CASTLE</h3>
+                        <h4>13th Aug, 2017</h4>
+                    </div>
+                    <a class="h5">More >></a>
+                </div>
+            </li>
+            <li class="col col-md-6">
+                <div>
+                    <img src="assets/images/events/20170706.jpg">
+                    <div class="data">
+                        <h3>HD CEFC PROMOTION EVENT IN ZURICH</h3>
+                        <h4>6th Jul, 2017</h4>
+                    </div>
+                    <a class="h5">More >></a>
+                </div>
+            </li>
+            <li class="col col-md-6">
+                <div>
+                    <img src="assets/images/events/20170622.jpg">
+                    <div class="data">
+                        <h3>SEMINAR ON EU-CHINA PRACTICAL CO-OPERATION</h3>
+                        <h4>22th Jun, 2017</h4>
+                    </div>
+                    <a class="h5">More >></a>
+                </div>
+            </li>
+            <li class="col col-md-6">
+                <div>
+                    <img src="assets/images/events/20170620.jpg">
+                    <div class="data">
+                        <h3>HD CEFC PROJECT STATUS REPORT</h3>
+                        <h4>20th Jun, 2017</h4>
+                    </div>
+                    <a class="h5">More >></a>
+                </div>
+            </li>
+            <li class="col col-md-6">
+                <div>
+                    <img src="assets/images/events/20170516.jpg">
+                    <div class="data">
+                        <h3>HD CEFC PROMOTION EVENT IN NUREMBERG</h3>
+                        <h4>16th May, 2017</h4>
+                    </div>
+                    <a class="h5">More >></a>
+                </div>
+            </li>
+            <li class="col col-md-12">
+                <div>
+                    <img src="assets/images/events/more.jpg">
+                    <div class="data">
+                        <a class="h3">FOR MORE EVENTS CLICK HERE</a>
+                    </div>
                 </div>
             </li>
         </ul>
