--- a/public/group.html
+++ b/public/group.html
@@ -26,8 +26,8 @@
                 <li class="about-li"><a href="about.html">About Us</a></li>
                 <li class="ec-li"><a href="events.html">Events</a></li>
                 <li class="projects-li"><a href="projects.html">Projects</a></li>
-                <li class="members-li"><a href="members.html">Members</a></li>
-                <li class="group-li"><a href="group.html">Work Group</a></li>
+                <li class="members-li"><a href="members.html">Technology Partners</a></li>
+                <li class="group-li"><a href="group.html">Working Groups</a></li>
                 <li class="contact-li"><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
@@ -35,6 +35,16 @@
 </div>
 <div class="container first-container">
     <div class="container-inner bg">
+    </div>
+</div>
+<div class="container first-second-container">
+    <div class="title">
+        <span class="triangle-bottomright"></span>
+        <span class="h3">3 AREAS AND 18 SECTORS</span>
+    </div>
+    <div class="container-inner">
+        <h3>City Focus, Life Focus, Digital Focus Consumption Focus, Medical Focus, Production Focus</h3>
+        <img src="assets/images/group/first-second.jpg">
     </div>
 </div>
 <div class="container second-container">
