--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
                 <li class="about-li"><a href="about.html">About Us</a></li>
                 <li class="ec-li"><a href="events.html">Events</a></li>
                 <li class="projects-li"><a href="projects.html">Projects</a></li>
-                <li class="members-li"><a href="members.html">Members</a></li>
-                <li class="group-li"><a href="group.html">Work Group</a></li>
+                <li class="members-li"><a href="members.html">Technology Partners</a></li>
+                <li class="group-li"><a href="group.html">Working Groups</a></li>
                 <li class="contact-li"><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
@@ -37,38 +37,24 @@
     <div class="flexslider container-inner">
         <ul class="slides">
             <li class="item row">
-                <img class="col col-md-7" src="assets/images/index/first/slider1.jpg">
-                <div class="flex-caption col col-md-5">
-                    <h3>HD CEFC</h3>
-                    <p>Huan De China EU Future City(HD CEFC) Project is the pilot project under China-EU Urbanization
-                        Partnership. EUTECC is facilitating the international business promotion of CEFC Project and
-                        attraction of various European companies which want to expand their business in China. </p>
-                    <ul>
-                        <li>Location:Shenzhen</li>
-                        <li>Strategic Partner:Huan De Group</li>
-                        <li>Total area:4,622,015 m2</li>
-                        <li>Huan De City phase 1<br>368,167 m2</li>
-                        <li>Zone A: Sustainable Urbanization Park<br>1,036,098 m2</li>
-                        <li>Zone C: Industry 4.0<br>1,092,229 m2</li>
-                        <li>Production Zone<br>1,095,421 m2</li>
-                    </ul>
-                </div>
+                <a href="about.html">
+                    <img src="assets/images/index/first/slider1.jpg">
+                </a>
             </li>
             <li class="item row">
-                <img class="col col-md-7" src="assets/images/index/first/slider2.jpg">
-                <div class="flex-caption col col-md-5">
-                    <h3>China Technology Center in Munich(under planning)</h3>
-                    <p>EUTECC is facilitating the Chinese high-tech companies and EU companies to have successful
-                        cooperation in Germany
-                    </p>
-                    <ul>
-                        <li>Location: Garching (Munich)</li>
-                        <li>Strategic Partner: Huan De Group</li>
-                        <li>Total GFA:100,000 sqm</li>
-                        <li>1 phase GFA:<br>20.000 sqm</li>
-                        <li>Chinese High-tech Companies</li>
-                    </ul>
-                </div>
+                <a href="events.html">
+                    <img src="assets/images/index/first/slider2.jpg">
+                </a>
+            </li>
+            <li class="item row">
+                <a href="events.html">
+                    <img src="assets/images/index/first/slider3.jpg">
+                </a>
+            </li>
+            <li class="item row">
+                <a href="group.html">
+                    <img src="assets/images/index/first/slider4.jpg">
+                </a>
             </li>
         </ul>
     </div>
@@ -81,30 +67,14 @@
     <div class="container-inner">
         <div class="content row ">
             <div class="col col-md-6">
-                <img src="assets/images/index/second/event1.jpg">
+                <img src="assets/images/index/second/event4.jpg">
             </div>
             <div class="col col-md-6 right-content">
-                <p class="title h4">Intelligent Production in Guangdong vs Industry 4.0 in Germany</p>
-                <p>On Apr 8th 2016, the Intelligent Production in Guangdong vs Industry 4.0 in Germany was held by
-                    Shenzhen Longgang District People’s Government in Munich. On the conference, a “Strategic
-                    Cooperation Framework on the Pilot Project of China EU Future City” was signed in between the
-                    following 5 parties: Shenzhen Longgang District People’s Government, Tucher Group, EUTECC, TUM Int’l
-                    GmbH, and Medical Valley EMN. </p>
-                <button class="btn btn-default">READ MORE</button>
-            </div>
-        </div>
-        <div class="content row ">
-            <div class="col col-md-6">
-                <img src="assets/images/index/second/event2.jpg">
-            </div>
-            <div class="col col-md-6 right-content">
-                <p class="title h4">China-Germany Symposium on Economic and Trade Cooperation</p>
-                <p>On Sep 12th 2016, China-Germany Symposium on Economic and Trade Cooperation was held in Munich,
-                    coorganized by Shenzhen Municipal People‘s Government and the State Government of Bavaria Germany.
-                    Many European companies entered into cooperative agreement with us on our projects in China. Mr
-                    Florian Schmied, Chairman of Tucher Group and EUTECC, gave a report on the Economic Development in
-                    Shenzhen, Cooperation with Germany and Industry 4.0 in China and Germany. </p>
-                <button class="btn btn-default">READ MORE</button>
+                <p class="title h4">2017 HD CEFC Promotion Event-Nuremberg</p>
+                <p>On May 16th 2017, HD CEFC Promotion Event was held in Tucher Castle in Nuremberg. Dr Fraas, the Vice
+                    Mayor of Nuremberg, and Dr Wagner, Head of International Business of HVB, addressed the event.
+                </p>
+                <a href="events.html" class="btn btn-default">READ MORE</a>
             </div>
         </div>
         <div class="content row ">
@@ -116,22 +86,8 @@
                 <p>On Mar 24th, supported and co-organized by EUTECC, Huande China EU Future City Promotion event was
                     held in Bayerischer Hof Hotel in Munich Bavaria. Mr Scharping, Former Minister of Defense in Germany
                     and European Socialist Parties, and Dr Wagner, Head of International Business of HVB, attended the
-                    event. Over 50 European companies took part in it. </p>
-                <button class="btn btn-default">READ MORE</button>
-            </div>
-        </div>
-        <div class="content row ">
-            <div class="col col-md-6">
-                <img src="assets/images/index/second/event4.jpg">
-            </div>
-            <div class="col col-md-6 right-content">
-                <p class="title h4">2017 HD CEFC Promotion Event-Nuremberg</p>
-                <p>On May 16th 2017, HD CEFC Promotion Event was held in Tucher Castle in Nuremberg. Dr Fraas, the Vice
-                    Mayor of Nuremberg, and Dr Wagner, Head of International Business of HVB, addressed the event. More
-                    than 50 European companies participated in the event, many of which signed cooperation agreement
-                    with us on the spot.
-                </p>
-                <button class="btn btn-default">READ MORE</button>
+                    event.</p>
+                <a href="events.html" class="btn btn-default">READ MORE</a>
             </div>
         </div>
         <div class="content row ">
@@ -140,33 +96,41 @@
             </div>
             <div class="col col-md-6 right-content">
                 <p class="title h4">2017 HD CEFC Promotion Event-Zurich</p>
-                <p>On July 6th 2017, the HD CEFC promotion event was successfully held in Zurich, the biggest city in
-                    Switzerland. Mr. Wybren Tearpestra from GIC, one of the largest specialized steel manufacturers and
-                    ship builders in the world, Mr. Yusuf Savmaz, Head of Zurich Region, Credit Suisse AG, and more than
-                    50 leading high-tech companies from Europe actively participated in the event.
+                <p>On July 6, 2017, the eu-china future city project successfully held a promotional campaign in Zurich,
+                    Switzerland's largest city.GIC's Wybren Tearpestra, Yusuf Savmaz of the Zurich region of credit
+                    suisse, and 50 of Europe's top high-tech companies took part in the event.
                 </p>
-                <button class="btn btn-default">READ MORE</button>
+                <a href="events.html" class="btn btn-default">READ MORE</a>
             </div>
         </div>
     </div>
 </div>
 <div class="container third-container">
     <div class="container-inner">
-        <div class="content row ">
+        <div class="content row">
             <div class="col col-md-9 left">
-                <p class="title h5">Contact Form</p>
-                <form>
-                    <input type="text" placeholder="First Name">
-                    <input type="text" placeholder="Last Name">
-                    <input type="text" placeholder="Phone">
-                    <input type="text" placeholder="Email Address"><span class="required">*</span>
-                    <textarea rows="3" placeholder="Comment"></textarea><span class="required">*</span>
-                    <button class="btn btn-default submit" onclick="return false;">SUBMIT</button>
-                </form>
+                <!--<p class="title h5">Contact Form</p>-->
+                <!--<form id="form-newsletter">-->
+                    <!--<input type="text" placeholder="First Name" name="firstName">-->
+                    <!--<input type="text" placeholder="Last Name" name="lastName">-->
+                    <!--<input type="text" placeholder="Phone" name="phone">-->
+                    <!--<input type="text" placeholder="Email Address" name="email"><span class="required">*</span>-->
+                    <!--<textarea rows="3" placeholder="Comment" name="comment"></textarea><span class="required">*</span>-->
+                    <!--<input type="hidden" name="subject" value="Contact Info"/>-->
+                    <!--&lt;!&ndash;<input type="hidden" name="toMail" value="info@eutecc.org"/>&ndash;&gt;-->
+                    <!--<button class="btn btn-default submit newsletter-submit" onclick="return false;">SUBMIT</button>-->
+                <!--</form>-->
+                <p class="title h5">European Technology Chamber (EUTECC)</p>
+                <p>Tel : +49 - 89 - 4522 430 - 0</p>
+                <p>Fax : +49 - 89 - 4522 430 - 21</p>
+                <p>Website : <a href="http://www.eutecc.org">www.eutecc.org</a></p>
+                <p>Email : <a href="mailto:info@eutecc.org">info@eutecc.org</a></p>
+                <p>Address : European Technology Chamber (EUTECC), Prannerstrasse 6, 80333 München</p>
             </div>
             <div class="col col-md-3 right">
                 <img src="assets/images/index/third/QRcode.jpg">
             </div>
+            <br style="clear:both;" />
         </div>
     </div>
 </div>
