--- a/public/members.html
+++ b/public/members.html
@@ -26,8 +26,8 @@
                 <li class="about-li"><a href="about.html">About Us</a></li>
                 <li class="ec-li"><a href="events.html">Events</a></li>
                 <li class="projects-li"><a href="projects.html">Projects</a></li>
-                <li class="members-li"><a href="members.html">Members</a></li>
-                <li class="group-li"><a href="group.html">Work Group</a></li>
+                <li class="members-li"><a href="members.html">Technology Partners</a></li>
+                <li class="group-li"><a href="group.html">Working Groups</a></li>
                 <li class="contact-li"><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
@@ -35,7 +35,7 @@
 </div>
 <div class="container first-container">
     <div class="container-inner bg">
-        <h2>EUTECC SUPPORTED COMPANIES
+        <h2>EUTECC  TECHNOLOGY  PARTNERS
             TO LAND IN HD FC</h2>
     </div>
     <div class="container-inner bottom">
@@ -55,7 +55,7 @@
 <div class="container second-container">
     <div class="title">
         <span class="triangle-bottomright"></span>
-        <span class="h3">MEMBER SELECTION</span>
+        <span class="h3">Technology Partners SELECTION</span>
     </div>
     <div class="container-inner">
         <ul class="content row">
