--- a/public/projects.html
+++ b/public/projects.html
@@ -26,8 +26,8 @@
                 <li class="about-li"><a href="about.html">About Us</a></li>
                 <li class="ec-li"><a href="events.html">Events</a></li>
                 <li class="projects-li"><a href="projects.html">Projects</a></li>
-                <li class="members-li"><a href="members.html">Members</a></li>
-                <li class="group-li"><a href="group.html">Work Group</a></li>
+                <li class="members-li"><a href="members.html">Technology Partners</a></li>
+                <li class="group-li"><a href="group.html">Working Groups</a></li>
                 <li class="contact-li"><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
@@ -40,12 +40,37 @@
                 <h3>Projects Supported by EUTECC</h3>
                 <ul>
                     <li>Huan De China EU Future City (HD CEFC)</li>
-                    <li>China Technology Center in Munich</li>
                 </ul>
             </div>
         </div>
     </div>
 </div>
+<div class="container first-next-container">
+    <div class="title">
+        <span class="triangle-bottomright"></span>
+        <span class="h3">8 STRATEGIC REGIONS</span>
+    </div>
+    <div class="container-inner">
+        <div class="content">
+            <div class="pull-left">
+                <h4>Huan De Group is planning to develop the HDFC <br>
+                    project in the following 8 strategic regions:</h4>
+                <ul>
+                    <li>Northeast China</li>
+                    <li>North China</li>
+                    <li>Bohai Coastal Region</li>
+                    <li>East China</li>
+                    <li>Central China</li>
+                    <li>Northwest China</li>
+                    <li>West China</li>
+                    <li>South China</li>
+                </ul>
+            </div>
+            <img src="assets/images/projects/first_next.jpg" class="pull-right"/>
+        </div>
+    </div>
+</div>
+
 <div class="container second-container">
     <div class="title">
         <span class="triangle-bottomright"></span>
@@ -71,7 +96,7 @@
                     <li>Location: <span class="comment">Shenzhen</span></li>
                     <li>Strategic Partner: <span class="comment">Huan De Group</span></li>
                     <li>Total area: <span class="comment">4,622,015 m2</span></li>
-                    <li>Huan De City phase 1: <span class="comment">368,167 m2</span></li>
+                    <li>Huan De City phase 1: <span class="comment">257,000 m2</span></li>
                     <li>Zone A: <span class="comment">Sustainable Urbanization Park 1,036,098 m²</span></li>
                     <li>Zone B: <span class="comment">Life Science 1,030,086 m2</span></li>
                     <li>Zone C: <span class="comment">Industry 4.0: 1,092,229 m2</span></li>
